<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PermissionActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="60dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine_permissionBoundary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="120dp"/>

        <TextView
            android:id="@+id/textView_activityPermission_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_title"
            android:textSize="25sp"
            android:textAppearance="@style/Typography.Heading"
            app:layout_constraintTop_toTopOf="@id/guideLine_top"
            app:layout_constraintStart_toStartOf="@id/guideLine_left" />

        <TextView
            android:id="@+id/textView_activityPermission_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/permission_description"
            android:textAppearance="@style/Typography.Paragraph3"
            app:layout_constraintTop_toBottomOf="@id/textView_activityPermission_title"
            app:layout_constraintStart_toStartOf="@id/guideLine_left"
            app:layout_constraintEnd_toEndOf="@id/guideLine_right" />

        <TextView
            android:id="@+id/textView_activityPermission_requiredPermission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="필수 접근 권한"
            android:textColor="@color/blue_400"
            android:textSize="15sp"
            android:textAppearance="@style/Typography.SubTitle1"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/guideLine_left"
            app:layout_constraintEnd_toEndOf="@id/guideLine_right"
            app:layout_constraintTop_toBottomOf="@id/textView_activityPermission_description"
            />

        <TextView
            android:id="@+id/textView_activityPermission_permissionLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_location"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/Typography.Paragraph3"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="@id/guideLine_left"
            app:layout_constraintTop_toBottomOf="@id/textView_activityPermission_requiredPermission"
            />

        <TextView
            android:id="@+id/textView_activityPermission_permissionLocation_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/permission_location_description"
            android:textAppearance="@style/Typography.Paragraph3"
            app:layout_constraintStart_toStartOf="@id/guideLine_permissionBoundary"
            app:layout_constraintEnd_toEndOf="@id/guideLine_right"
            app:layout_constraintTop_toTopOf="@id/textView_activityPermission_permissionLocation"
            app:layout_constraintBottom_toBottomOf="@id/textView_activityPermission_permissionLocation"
            />

        <TextView
            android:id="@+id/textView_activityPermission_optionalPermission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="선택 접근 권한"
            android:textColor="@color/blue_400"
            android:textSize="15sp"
            android:textAppearance="@style/Typography.SubTitle1"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/guideLine_left"
            app:layout_constraintEnd_toEndOf="@id/guideLine_right"
            app:layout_constraintTop_toBottomOf="@id/textView_activityPermission_permissionLocation"
            />

        <TextView
            android:id="@+id/textView_activityPermission_permissionCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_camera"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/Typography.Paragraph3"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="@id/guideLine_left"
            app:layout_constraintTop_toBottomOf="@id/textView_activityPermission_optionalPermission"
            />

        <TextView
            android:id="@+id/textView_activityPermission_permissionCamera_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/permission_camera_description"
            android:textAppearance="@style/Typography.Paragraph3"
            app:layout_constraintStart_toStartOf="@id/guideLine_permissionBoundary"
            app:layout_constraintEnd_toEndOf="@id/guideLine_right"
            app:layout_constraintTop_toTopOf="@id/textView_activityPermission_permissionCamera"
            app:layout_constraintBottom_toBottomOf="@id/textView_activityPermission_permissionCamera"
            />

        <TextView
            android:id="@+id/textView_activityPermission_permissionStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_storage"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/Typography.Paragraph3"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/guideLine_left"
            app:layout_constraintTop_toBottomOf="@id/textView_activityPermission_permissionCamera"
            />

        <TextView
            android:id="@+id/textView_activityPermission_permissionStorage_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/permission_storage_description"
            android:textAppearance="@style/Typography.Paragraph3"
            app:layout_constraintStart_toStartOf="@id/guideLine_permissionBoundary"
            app:layout_constraintEnd_toEndOf="@id/guideLine_right"
            app:layout_constraintTop_toTopOf="@id/textView_activityPermission_permissionStorage"
            app:layout_constraintBottom_toBottomOf="@id/textView_activityPermission_permissionStorage"
            />

        <TextView
            android:id="@+id/textView_activityPermission_dot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textStyle="bold"
            android:textAppearance="@style/Typography.Paragraph1"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/textView_activityPermission_permissionStorage"
            app:layout_constraintStart_toStartOf="@id/guideLine_left"/>

        <TextView
            android:id="@+id/textView_activityPermission_optionalPermission_discription1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/permission_optional_description"
            android:textAppearance="@style/Typography.Paragraph3"
            app:layout_constraintEnd_toEndOf="@id/guideLine_right"
            app:layout_constraintStart_toEndOf="@+id/textView_activityPermission_dot1"
            app:layout_constraintTop_toTopOf="@id/textView_activityPermission_dot1"/>

        <TextView
            android:id="@+id/textView_activityPermission_dot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textStyle="bold"
            android:textAppearance="@style/Typography.Paragraph1"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/textView_activityPermission_optionalPermission_discription1"
            app:layout_constraintStart_toStartOf="@id/guideLine_left"/>

        <TextView
            android:id="@+id/textView_activityPermission_optionalPermission_discription2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/permission_optional_setting"
            android:textAppearance="@style/Typography.Paragraph3"
            app:layout_constraintEnd_toEndOf="@id/guideLine_right"
            app:layout_constraintStart_toEndOf="@+id/textView_activityPermission_dot2"
            app:layout_constraintTop_toTopOf="@id/textView_activityPermission_dot2"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_activityPermission_Confirm"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:text="@string/confirm"
            android:textAppearance="@style/Typography.Title2"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/blue_600"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>